# fastapi_practice

fast_api_study/fast_api_prac1/: README.md  app.py  main.py  pyproject.toml
fast_api_study/fast_api_prac2/: app.py  pyproject.toml
fast_api_study/fast_api_prac3/: app.py  pyproject.toml
fast_api_whisper/: README.md  app.py  pyproject.toml
fastapi_gppp/: app.py  pyproject.toml
fastapi_langchain_study_with_whisper_ytdlp/: README.md  app.py  main.py  pyproject.toml
fastapi_langchain_study_with_whisper_ytdlp/services/: langchain_service.py  whisper_service.py  yt_dlp_services.py
fastapi_langchain_study_with_whisper_ytdlp/transfer/: transcribe.py
fastapi_llm/: app.py  main.py  pyproject.toml
fastapi_router/: app.py  pyproject.toml
fastapi_router/controller/: test.py
fastapi_transformer/: app.py  pyproject.toml  qna.py
fastapi_uv_practice/: .gitignore  app.py  main.py  pyproject.toml
fastapi_uv_practice/controller/: admins.py  users.py
fastapi_uv_practice/model/: pgsql_test.py
gradio_test/: pyproject.toml
python_old_study/: lambda_test.py  list_comp.py
python_old_study/example/: README.md  main.py  pyproject.toml
