[project]
name = "fastapi-langchain-study-with-whisper-ytdlp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-openai>=0.3.17",
    "openai>=1.79.0",
    "openai-whisper>=20240930",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.2",
    "whisper>=1.1.10",
    "yt-dlp>=2025.4.30",
]
